fix header overflow weirdness

--- a/regulations/static/regulations/css/less/module/header.less
+++ b/regulations/static/regulations/css/less/module/header.less
@@ -33,7 +33,8 @@
     display: inline-block;
     float: left;
     line-height: 57px;
-    width: 50%;
+    height: 57px;
+    overflow: hidden;
 
     .reg-title,
     .site-title {
@@ -101,6 +102,8 @@
 }
 
 #content-header {
+    //padding-left: 60px;
+
     li {
         height: 2.125em;
         line-height: 2.125em;
